[tool.poetry]
name = "aes70"
version = "0.1.0"
description = "A Python implementation of the AES70/OCA control & monitoring standard"
authors = ["Dave Curtis <davec-@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
zeroconf = "^0.39.2"
black = "^23.3.0"
pytest = "^7.3.1"
bitstring = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
